Fixed z-index issue with modal window over modal window: cssnano rewrote inxexes :-/

--- a/src/assets/less/components/sweetalert.less
+++ b/src/assets/less/components/sweetalert.less
@@ -1,6 +1,6 @@
 .sweet-overlay {
-  z-index: 1200 !important;
+  z-index: 1200;
 }
 .sweet-alert {
-  z-index: 1201 !important;
+  z-index: 1201;
 }
